--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,4 +12,10 @@ jwt.expiration.refresh=604800000
 spring.data.mongodb.uri=mongodb://localhost:27017/quizhiveDB
 
 ## Logging Configuration
-#logging.level.com.example.demo=DEBUG
+logging.level.com.example.demo=DEBUG
+
+management.endpoints.web.exposure.include=*
+management.endpoint.mappings.enabled=true
+management.server.port=8080
+
+
