--- a/pom.xml
+++ b/pom.xml
@@ -34,6 +34,13 @@
 			<artifactId>spring-boot-starter-web</artifactId>
 		</dependency>
 
+
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-actuator</artifactId>
+		</dependency>
+
+
 		<!-- Spring Boot Data MongoDB Starter -->
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
