--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -19,3 +19,11 @@ management.endpoint.mappings.enabled=true
 management.server.port=8080
 
 
+# Spring Security Configuration
+spring.security.user.name=admin
+spring.security.user.password=adminpass
+spring.security.user.roles=ADMIN
+
+# Swagger Configuration
+springdoc.api-docs.path=/api-docs
+springdoc.swagger-ui.path=/swagger-ui.html
