Change Package and some dockerize

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,7 @@
-spring.application.name=demo
+# Spring application name
+spring.application.name=QuizHive
+
+# Server configuration
 server.port=8080
 
 # JWT Configuration
@@ -9,13 +12,12 @@ jwt.expiration.access=900000
 jwt.expiration.refresh=604800000
 
 # MongoDB Configuration
-spring.data.mongodb.uri=mongodb://localhost:27017/quizhiveDB
+spring.data.mongodb.uri=mongodb://${DB_USERNAME:user}:${DB_PASSWORD:pass}@${DB_HOST:localhost}:${DB_PORT:27017}/${DB_NAME:quizhive}?retryWrites=true&w=majority
+spring.data.mongodb.database=${DB_NAME:quizhive}
 
-## Logging Configuration
-logging.level.com.example.demo=DEBUG
+# Logging Configuration
+logging.file.name=application.log
+logging.level.root=INFO
 
 management.endpoints.web.exposure.include=*
-management.endpoint.mappings.enabled=true
-management.server.port=8080
-
-
+management.server.port=${PORT:8080}
