--- a/pom.xml
+++ b/pom.xml
@@ -7,23 +7,23 @@
 	<modelVersion>4.0.0</modelVersion>
 
 	<!-- Project Coordinates -->
-	<groupId>com.example</groupId>
-	<artifactId>spring-boot-mongo-demo</artifactId>
-	<version>1.0.0</version>
+	<groupId>edu.sharif.web</groupId>
+	<artifactId>QuizHive-Backend</artifactId>
+	<packaging>war</packaging>
+	<description>The Back-End of QuizHive implemented with Spring Boot</description>
+	<version>2.0.0</version>
 
 	<!-- Parent POM -->
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>3.1.2</version>
+		<version>3.4.1</version>
 		<relativePath/>
 	</parent>
 
 	<!-- Properties -->
 	<properties>
-		<java.version>17</java.version>
-		<maven.compiler.source>17</maven.compiler.source>
-		<maven.compiler.target>17</maven.compiler.target>
+		<java.version>21</java.version>
 	</properties>
 
 	<!-- Dependencies -->
