--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -51,26 +51,24 @@ jobs:
         run: |
           docker buildx build --platform linux/amd64,linux/arm64 -t ${{ secrets.DOCKER_USERNAME }}/quizhive_spring:latest . --push
 
-      - name: Copy docker-compose.yml and .env to server
+
+      - name: Copy docker-compose.yml to server
         uses: appleboy/scp-action@v0.1.0
         with:
           host: ${{ secrets.SSH_HOST }}
           username: ${{ secrets.SSH_USERNAME }}
-          key: ${{ secrets.SSH_PRIVATE_KEY }}
-          source: "docker-compose.yml,.env"
-          target: "/home/ubuntu/QuizHive_new/QuizHive-Backend-SpringBoot-Maven"
-          options: '-vvv'  
-
-        # CHANGE
+          password: ${{ secrets.SSH_PASSWORD }}
+          source: "docker-compose.yml"
+          target: "/home/kalado/repos/Kalado-Backend"
 
       - name: Deploy with SSH
         uses: appleboy/ssh-action@v0.1.7
         with:
           host: ${{ secrets.SSH_HOST }}
           username: ${{ secrets.SSH_USERNAME }}
-          key: ${{ secrets.SSH_PRIVATE_KEY }}
+          password: ${{ secrets.SSH_PASSWORD }}
           script: |
-            cd /home/ubuntu/QuizHive_new/QuizHive-Backend-SpringBoot-Maven
+            cd //home/kalado/repos/Kalado-Backend
             docker compose down
             docker compose pull
             docker compose up -d
