--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,8 @@ version: "3.9"
 
 services:
   app:
-    image: amiril/quizhive_spring:latest
+#    image: amiril/quizhive_spring:latest
+    build: .
     container_name: quizhive_spring
     env_file: .env
     ports:
@@ -13,24 +14,22 @@ services:
 
   # MongoDB service
   mongodb:
-    container_name: quizhive_mongodb
+    container_name: quizhive_mongo
+#    environment:
+#      - MONGO_INITDB_ROOT_USERNAME=${MONGO_INITDB_ROOT_USERNAME}
+#      - MONGO_INITDB_ROOT_PASSWORD=${MONGO_INITDB_ROOT_PASSWORD}
+#      - MONGO_INITDB_DATABASE=${MONGO_INITDB_DATABASE}
     image: mongo:latest
-    restart: always
     command:
       - --storageEngine
       - wiredTiger
-      - --auth
-    environment:
-      - MONGO_INITDB_ROOT_USERNAME=${MONGO_INITDB_ROOT_USERNAME}
-      - MONGO_INITDB_ROOT_PASSWORD=${MONGO_INITDB_ROOT_PASSWORD}
-      - MONGO_INITDB_DATABASE=${MONGO_INITDB_DATABASE}
+#      - --auth
     ports:
-      - "27017:27017"
+      - "127.0.0.1:$MONGO_DB_PORT:27017"
     volumes:
-      - ./mongodb-data:/data/db
+      - quizhive_data:/data/db
       - ./db/mongo-init.js:/docker-entrypoint-initdb.d/mongo-init.js
-    env_file: .env
-
+    restart: unless-stopped
 
 volumes:
   quizhive_data:
