--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,8 +12,9 @@ jwt.expiration.access=900000
 jwt.expiration.refresh=604800000
 
 # MongoDB Configuration
-spring.data.mongodb.uri=mongodb://${DB_USERNAME:user}:${DB_PASSWORD:pass}@${DB_HOST:localhost}:${DB_PORT:27017}/${DB_NAME:quizhive}?retryWrites=true&w=majority
-spring.data.mongodb.database=${DB_NAME:quizhive}
+#spring.data.mongodb.uri=mongodb://${MONGO_INITDB_ROOT_USERNAME:mongohive}:${MONGO_INITDB_ROOT_PASSWORD:pass}@${MONGO_DB_HOST:localhost}:${MONGO_DB_PORT:27017}/${MONGO_INITDB_DATABASE:quizhive}?retryWrites=true&w=majority
+spring.data.mongodb.uri=mongodb://${MONGO_DB_HOST:localhost}:${MONGO_DB_PORT:27017}/${MONGO_INITDB_DATABASE:quizhive}?retryWrites=true&w=majority
+spring.data.mongodb.database=${MONGO_INITDB_DATABASE:quizhive}
 
 # Logging Configuration
 logging.file.name=application.log
