Change for deploy

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,8 +2,8 @@ version: "3.9"
 
 services:
   app:
-#    image: amiril/quizhive_spring:latest
-    build: .
+    image: amiril/quizhive_spring:latest
+#    build: .
     container_name: quizhive_spring
     env_file: .env
     ports:
@@ -15,15 +15,15 @@ services:
   # MongoDB service
   mongodb:
     container_name: quizhive_mongo
-#    environment:
-#      - MONGO_INITDB_ROOT_USERNAME=${MONGO_INITDB_ROOT_USERNAME}
-#      - MONGO_INITDB_ROOT_PASSWORD=${MONGO_INITDB_ROOT_PASSWORD}
-#      - MONGO_INITDB_DATABASE=${MONGO_INITDB_DATABASE}
+    environment:
+      - MONGO_INITDB_ROOT_USERNAME=${MONGO_INITDB_ROOT_USERNAME}
+      - MONGO_INITDB_ROOT_PASSWORD=${MONGO_INITDB_ROOT_PASSWORD}
+      - MONGO_INITDB_DATABASE=${MONGO_INITDB_DATABASE}
     image: mongo:latest
     command:
       - --storageEngine
       - wiredTiger
-#      - --auth
+      - --auth
     ports:
       - "127.0.0.1:$MONGO_DB_PORT:27017"
     volumes:
