Deploy - remove mongo password

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,8 +12,8 @@ jwt.expiration.access=900000
 jwt.expiration.refresh=604800000
 
 # MongoDB Configuration
-spring.data.mongodb.uri=mongodb://${MONGO_INITDB_ROOT_USERNAME:mongohive}:${MONGO_INITDB_ROOT_PASSWORD:pass}@${MONGO_DB_HOST:localhost}:${MONGO_DB_PORT:27017}/${MONGO_INITDB_DATABASE:quizhive}?retryWrites=true&w=majority
-#spring.data.mongodb.uri=mongodb://${MONGO_DB_HOST:localhost}:${MONGO_DB_PORT:27017}/${MONGO_INITDB_DATABASE:quizhive}?retryWrites=true&w=majority
+#spring.data.mongodb.uri=mongodb://${MONGO_INITDB_ROOT_USERNAME:mongohive}:${MONGO_INITDB_ROOT_PASSWORD:pass}@${MONGO_DB_HOST:localhost}:${MONGO_DB_PORT:27017}/${MONGO_INITDB_DATABASE:quizhive}?retryWrites=true&w=majority
+spring.data.mongodb.uri=mongodb://${MONGO_DB_HOST:localhost}:${MONGO_DB_PORT:27017}/${MONGO_INITDB_DATABASE:quizhive}?retryWrites=true&w=majority
 spring.data.mongodb.database=${MONGO_INITDB_DATABASE:quizhive}
 
 # Logging Configuration
