--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,8 +3,8 @@ version: "3.9"
 services:
   app:
     image: amiril/quizhive_spring:latest
-#    build: .
-    container_name: quizhive_spring
+    build: .
+#    container_name: quizhive_spring
     env_file: .env
     ports:
       - "${PORT}:8080"
