Add Google OAUTH2

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,6 +11,10 @@ jwt.expiration.access=900000
 # 7 days in milliseconds
 jwt.expiration.refresh=604800000
 
+google.client.id=${GOOGLE_CLIENT_ID:}
+google.client.secret=${GOOGLE_CLIENT_SECRET:}
+google.redirect.uri=${GOOGLE_REDIRECT_URI:}
+
 # MongoDB Configuration
 #spring.data.mongodb.uri=mongodb://${MONGO_INITDB_ROOT_USERNAME:mongohive}:${MONGO_INITDB_ROOT_PASSWORD:pass}@${MONGO_DB_HOST:localhost}:${MONGO_DB_PORT:27017}/${MONGO_INITDB_DATABASE:quizhive}?retryWrites=true&w=majority
 spring.data.mongodb.uri=mongodb://${MONGO_DB_HOST:localhost}:${MONGO_DB_PORT:27017}/${MONGO_INITDB_DATABASE:quizhive}?retryWrites=true&w=majority
